--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Dojo Survey</title>
 </head>
 <body>
@@ -15,13 +15,16 @@
         <input type="text" name='name'id="name">
         <label for="locations">Dojo Location:</label>
         <select name="location" id="">
+            <option value="Value">Select a Location</option>
             <option value="New Jersey">New Jersey</option>
             <option value="Michigan">Michigan</option>
             <option value="California">California</option>
             <option value="Texas">Texas</option>
             <option value="Canada">Canada</option>
         </select>
-        <select name="language" id="">
+        <label for="language">Dojo Location:</label>
+        <select name="language" id="" class="btn btn-success">
+            <option value="Value">Select a Language</option>
             <option value="Python">Python</option>
             <option value="HTML">HTML</option>
             <option value="Css">CSS</option>
@@ -29,8 +32,17 @@
             <option value="SQL">SQL (lol)</option>
         </select>
         <label for="comment">Comment:</label>
-        <input type="text" name='comment' id="comment">
-        <input type="submit" value="Submit">
+        <div class="div">
+            <textarea name="comment" id="" cols="30" rows="5"></textarea>
+            <input type="submit" value="Submit" class="btn btn-primary">
+        </div>
     </form>
+    {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+    {% if messages %}                            <!-- check if there are any messages -->
+        {% for message in messages %}            <!-- loop through the messages -->
+            <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
 </body>
 </html>
